# LinearAlgebra

./: .gitignore  CMakeLists.txt  comp.sh  main.c  makefile
lib/: indexing.h  operation.h
src/: createMatrix.c  main.c
src/OperationBetweenMatrix/: main.c  product.c  sum.c
src/lib/: operation.h
test/: CMakeLists.txt  CreationMatrix.cpp  OperationBetweenMatrixTests.cpp  randomizeValueMatrix.c  runAllTest.cpp  test.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
